--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         alert("lrhub 请求媒体权限")
         alert("lrhub 请求后台运行权限")
         alert("lrhub 请求悬浮窗权限")
+        alert("lrhub 请求通知权限")
+        alert("lrhub 请求访问网络权限")
+        alert("lrhub 请求访问蓝牙权限")
+        alert("lrhub 请求访问存储权限")
+        alert("lrhub 请求访问摄像头权限")
+        alert("lrhub 请求访问麦克风权限")
     </script>
 </body>
 </html>
