--- a/index.html
+++ b/index.html
@@ -14,27 +14,8 @@
         <img src="https://s21.ax1x.com/2025/07/18/pV32Nhn.jpg" alt="" style="width: 100%;border-radius: 10px;box-shadow: 0 0 10px rgba(0,0,0,0.5);">
         <div style="height: 100px;margin: 8px;font-size: 2em;">好康的</div></a>
     </div>
+    <div style="height: 500px;"></div>
     <script>
-        alert("lrhub 请求储存权限")
-        alert("lrhub 请求通知权限")
-        alert("lrhub 请求相册权限")
-        alert("lrhub 请求相机权限")
-        alert("lrhub 请求麦克风权限")
-        alert("lrhub 请求位置权限")
-        alert("lrhub 请求联系人权限")
-        alert("lrhub 请求日历权限")
-        alert("lrhub 请求短信权限")
-        alert("lrhub 请求传感器权限")
-        alert("lrhub 请求电话权限")
-        alert("lrhub 请求媒体权限")
-        alert("lrhub 请求后台运行权限")
-        alert("lrhub 请求悬浮窗权限")
-        alert("lrhub 请求通知权限")
-        alert("lrhub 请求访问网络权限")
-        alert("lrhub 请求访问蓝牙权限")
-        alert("lrhub 请求访问存储权限")
-        alert("lrhub 请求访问摄像头权限")
-        alert("lrhub 请求访问麦克风权限")
     </script>
 </body>
 </html>
